[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escluse"
version = "0.1.0"
description = "Official Escluse SDK for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Escluse", email = "contact@esluce.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
websockets = ["websockets>=11.0"]
dev = ["pytest", "pytest-asyncio", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://esluce.com"
Documentation = "https://docs.esluce.com"
Repository = "https://github.com/escluse/sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["escluse*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true